...
                        android:id="@+id/image_takeoff"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        app:srcCompat="@drawable/ic_flight_takeoff"/>

                    <EditText
                        android:id="@+id/text_takeoff"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/origin_hint"
                        android:imeOptions="actionSearch"
...
                        android:id="@+id/image_landing"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        app:srcCompat="@drawable/ic_flight_land"/>

                    <EditText
                        android:id="@+id/text_landing"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/destination_hint"
                        android:imeOptions="actionSearch"
...
